Change Log
==============
2016/01/06 (IBM_DB adapter 3.0.1, driver 3.0.1)
  - Combined MacOS and Linux installation code in one file under extconf.rb to handle any Mac OS version upgrade.
  - Fixed bug#49 - Regardless of what value you pass in for a clob, update_attributes will set the value to <ibm>@@@IBMTEXT@@@</ibm> in the database
  
2015/09/30 (IBM_DB adapter 3.0.0, driver 3.0.0)
  - Added minimum dependency for Rails version 4.2.0 and for active record 4.2.0, as some Rails 4.2 APIs are not backward compatible.
  - Fixed Foreign key issues
  - Changed code to remove use of serialized_attributes as it is deprecated.
  
2015/07/14 (IBM_DB adapter 2.6.1, driver 2.6.1)
  - Foreign key support
  
2015/06/29 (IBM_DB adapter 2.6.0, driver 2.6.0)
  - Enhanced installation for Windows to pull IBM Data Server Driver automatically on first use  if not present
  - Enhanced installation for Mac OS to pull IBM Data Server Driver automatically if not present
  - Removed support for Ruby 1.9.3
  
2015/06/08 (IBM_DB adapter 2.5.27, driver 2.5.27)
  - Support for Ruby  2.2.x on Windows and Linux platform
  - Fixed bug#28 Create table fails on db:migrate task in ActiveRecord 4.2.1 if database adapter not support foreign_keys.

2015/04/08 (IBM_DB adapter 2.5.26, driver 2.5.26)
  - Fixed bug#22 - Error 'undefined method lookup_cast_type encountered' with rails version lesser than 4.2

2015/03/24 (IBM_DB adapter 2.5.25, driver 2.5.25)
  - Support for Rails 4.2.x
  - Support for Ruby  2.2.x on Windows and Linux platform

2014/08/03 (IBM_DB adapter 2.5.18, driver 2.5.14) :
  - Support for Rails 4.1.x
  - Enhanced installation to pull IBM Data Server Driver automatically if not present

2014/03/03 (IBM_DB adapter 2.5.17, driver 2.5.14) :
  - Shipping binaries compatible with Ruby 2.0 for linux x86_64 systems (#29871)
  - Fixed #29869
  - Support microsecond timestamp.

2014/02/26 (IBM_DB adapter 2.5.16, driver 2.5.14) :
  - Yanked version 2.5.15. Hence using new version number
