@@ -1,5 +1,5 @@
 =====================================================================
-README for the IBM_DB Adapter (3.0.0) and Driver (3.0.0) (2015/09/30)
+README for the IBM_DB Adapter (3.0.2) and Driver (3.0.2) (2016/05/24)
 For ActiveRecord Version >= 4.2.0 (and Rails >= 4.2.0)
 =====================================================================
 
