@@ -20,7 +20,7 @@ e-mail id: opendev@us.ibm.com
 
 License
 =======
-Copyright (c) 2006 - 2015 IBM Corporation
+Copyright (c) 2006 - 2016 IBM Corporation
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the "Software"),
